# ds2-ps3-save-editor

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
analysis/: find_item.py
docs/: CharacterStats.md  Findings.md  Inventory.md  SaveFormat.md
ds2ps3edit/: __main__.py
ds2ps3edit/core/: backup.py  inventory.py  items_db.py  mirror.py  save.py  stats.py
ds2ps3edit/data/: items.json
ds2ps3edit/gui/: app.py
tests/: test_smoke.py
