[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ds2ps3edit"
version = "0.1.0"
description = "Save editor for Dark Souls II PS3 (NPUB31358) under RPCS3"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "radulin4a" }]

[project.scripts]
ds2ps3edit = "ds2ps3edit.gui.app:main"

[tool.setuptools.packages.find]
include = ["ds2ps3edit*"]
